--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
       <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the
       <a href="http://www.softcover.io/">Softcover publishing platform</a>. This
       page is part of the sample site for <a
-            href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and Layout
+        href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and Layout
       to Be Dangerous</em></a>, which teaches the basicics of
       <strong>C</strong>ascading <strong>S</strong>tyle
       <strong>S</strong>heets, the language that
@@ -73,14 +73,14 @@ layout: default
           Michael is the creator of the
           <a href="http://railstutorial.org/">Ruby on Rails
             Tutorial</a> and principal author of the
-          <a href="https://learnenough.com/"> Learn Enough to Be Dangerous</a>
-          introductory sequence.
+          <a href="https://learnenough.com/">
+            Learn Enough to Be Dangerous</a> introductory sequence.
         </p>
         <p>
           Michael is also notorious as the founder of
-          <a href="http://tauday.com/">Tau Day</a> and author of
-          <a href="http://tauday.com/tau-manifesto"><em>The Tau
-            Manifesto</em></a>, but rumors that he's secretly a supervillain are
+          <a href="http://tauday.com/">Tau Day</a> and
+          author of <a href="http://tauday.com/tau-manifesto"><em>The Tau
+          Manifesto</em></a>, but rumors that he's secretly a supervillain are
           slightly exaggerated.
         </p>
       </div>
